package com.djs.execution.model;

public enum JobExecutionStatus {
    PENDING,
    RUNNING,
    SUCCESS,
    FAILED,
    DEAD
}
