package com.djs.job.model;

public enum JobStatus {
    ACTIVE,
    PAUSED,
    COMPLETED,
    DELETED
}
